Fix Bug 334937 - Kmail crashes when attaching a file if "enable detection of missing attachments" is not selected

FIXED-IN: 4.13.2
BUG: 334937